tests/rustdoc-ui/error-in-impl-trait/infinite-recursive-type.rs
fn f() -> impl Sized {
    enum E {
        //~^ ERROR: recursive type
        V(E),
    }

    unimplemented!()
}
